--- a/recipes/jackDanielsSauce.html
+++ b/recipes/jackDanielsSauce.html
@@ -8,5 +8,20 @@
 </head>
 <body>
     <h1>T.G.I. Friday's Jack Daniels Sauce</h1>
+    <img src="C:\Users\User\repos\img\image.jpg">
+    <ul>
+        <li>1 head garlic</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 ⅓ cups dark brown sugar</li>
+        <li>1 cup pineapple juice</li>
+        <li>⅔ cup water</li>
+        <li>¼ cup teriyaki sauce</li>
+        <li>1 tablespoon soy sauce</li>
+        <li>3 tablespoons lemon juice</li>
+        <li>3 tablespoons minced white onion</li>
+        <li>1 tablespoon bourbon whiskey</li>
+        <li>1 tablespoon crushed pineapple</li>
+        <li>¼ teaspoon cayenne pepper</li>
+    </ul>
 </body>
 </html>
