--- a/recipes/jackDanielsSauce/jackDanielsSauce.html
+++ b/recipes/jackDanielsSauce/jackDanielsSauce.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/jackDanielsSauce.css">
 </head>
 <body>
     <h1>T.G.I. Friday's Jack Daniels Sauce</h1>
-    <img src="C:\Users\User\repos\img\image.jpg">
+    <img src="C:\Users\User\repos\odin-recipes\img\image.jpg">
     <ul>
         <li>1 head garlic</li>
         <li>1 tablespoon olive oil</li>
